--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,7 +59,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item (click)="logout()">
+          <ion-item  (click)="logout()">
             <ion-icon name="log-out-outline" slot="start"></ion-icon>
             <ion-label>Logout</ion-label>
           </ion-item>
@@ -69,4 +69,5 @@
   </ion-menu>
   <ion-router-outlet id="main">
   </ion-router-outlet>
+  <lib-ng-toast></lib-ng-toast>
 </ion-app>
